--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,7 @@
 
+<div>
+  <a [routerLink]="['quotes']">Főoldal</a>
+  <a [routerLink]="['random']">Napi idézet</a>
+</div>
+
 <router-outlet></router-outlet>
