--- a/src/app/feature/random/random.component.scss
+++ b/src/app/feature/random/random.component.scss
@@ -1,9 +1,13 @@
+
 #wrapper {
-    width: 100vw;
+    width: 90vw;
     height: 100vh;
+    margin-left: auto;
+    margin-right: auto;
     display: flex;
     justify-content: center;
     align-items: center;
+    // border: 1px solid black;
 
     #boxForRandomQuote {
         border: 1px solid black;
