--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,6 +2,6 @@
 <div>
   <a [routerLink]="['quotes']">Főoldal</a>
   <a [routerLink]="['random']">Napi idézet</a>
-</div>
+</div><br><br>
 
 <router-outlet></router-outlet>
