--- a/src/app/feature/quotes/quotes.component.html
+++ b/src/app/feature/quotes/quotes.component.html
@@ -2,7 +2,7 @@ Keresés: <input type="text" [(ngModel)]="searchedString" (ngModelChange)="searc
 
 <p>{{message}}</p>
 
-<div *ngFor="let quote of quotes" id="boxForQuote">
+<div *ngFor="let quote of displayedQuotes" id="boxForQuote">
     <p id="title">{{quote.id}}. idézet</p>
     <p id="quote">"{{quote.quote}}"</p>
     <p id="author">{{quote.author}}</p>
